<resources>
    <string name="app_name">Calculadora</string>
    <string name="zero">0</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="del"><![CDATA[<-]]></string>
    <string name="Eq">=</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="res">-</string>
    <string name="sum">+</string>
    <string name="dot">.</string>

</resources>